--- a/branding_compliance_frontend/.env.example
+++ b/branding_compliance_frontend/.env.example
@@ -1,17 +1,19 @@
-# Environment variables for Branding Compliance Frontend
+# Frontend environment variables (CRA-compatible naming)
+# These are read safely via src/utils/env.js and do not require Node's process polyfill at runtime.
 
-# Base URL for backend API (no trailing slash)
-# Example for local dev with proxy or same-origin:
+# Base URL for backend API. If omitted, defaults to "/api".
+# Examples:
+#   http://localhost:8000
+#   https://api.example.com
 REACT_APP_API_BASE_URL=/api
 
-# Enable frontend-only demo authentication.
-# When true, the Login screen supports username/password and accepts:
-#   username: admin
-#   password: password
-# AuthContext will set:
-#   user.id = 'admin'
-#   roles = ['admin','approver','operator','viewer']
-#   role = 'admin'
-# The api client will emit X-User-ID: admin after login.
-# IMPORTANT: Set to false in production when backend auth is available.
+# Enable demo auth flow (username/password) in the UI.
+# Accepted truthy: "true", "1", "yes", "on"
+# Accepted falsy:  "false", "0", "no", "off"
+# Default is true if not set.
 REACT_APP_DEMO_AUTH=true
+
+# Runtime override note:
+# In production you can also inject variables at runtime via a global:
+#   <script>window.__ENV__ = { REACT_APP_API_BASE_URL: "https://api.example.com", REACT_APP_DEMO_AUTH: "false" };</script>
+# The helper getEnv() will read window.__ENV__ first, then import.meta.env, then guarded process.env.
